feat: 分割线，list 拖拽优化

--- a/src/components/Editor/extensions/bulleted-list/components/BulletedList/index.module.less
+++ b/src/components/Editor/extensions/bulleted-list/components/BulletedList/index.module.less
@@ -1,7 +1,7 @@
 .list {
   padding-inline-start: 32px;
   margin: 0;
-  li:last-child>*:last-child {
+  li:last-child *:last-child {
     margin: 0;
   }
 }
