--- a/src/components/Editor/extensions/divide-line/components/DivideLine/index.module.less
+++ b/src/components/Editor/extensions/divide-line/components/DivideLine/index.module.less
@@ -1,6 +1,11 @@
-.divideLine {
-  width: 80%;
-  height: 2px;
-  background-color: var(--line-color, #e8e8e8);
-  margin: 0 auto 20px;
+.container {
+  position: relative;
+  .divideLine {
+    width: 80%;
+    height: 2px;
+    background-color: var(--line-color, #e8e8e8);
+    margin: 0 auto 20px;
+  }
+  @import '@/components/Editor/extensions/drop-common.less';
+  @import '@/components/Editor/extensions/drag-common.less';
 }
