feat: 拖拽优化，标题支持拖拽

--- a/src/components/Editor/extensions/detail/components/Detail/index.module.less
+++ b/src/components/Editor/extensions/detail/components/Detail/index.module.less
@@ -35,6 +35,7 @@
     }
   }
   .content {
+    padding-left: 16px;
     display: grid;
     grid-template-rows: 0fr;
     transition: all 0.2s ease-in-out;
