--- a/src/components/Editor/extensions/divide-line/components/DivideLine/index.module.less
+++ b/src/components/Editor/extensions/divide-line/components/DivideLine/index.module.less
@@ -8,4 +8,7 @@
   }
   @import '@/components/Editor/extensions/drop-common.less';
   @import '@/components/Editor/extensions/drag-common.less';
+  .dragHandler {
+    top: -12px;
+  }
 }
