--- a/src/components/Editor/extensions/image/components/Image/index.module.less
+++ b/src/components/Editor/extensions/image/components/Image/index.module.less
@@ -78,4 +78,10 @@
   background-color: rgba(255, 255, 255, 0.1);
 }
 
+.dropContainer {
+  position: relative;
+  @import '@/components/Editor/extensions/drop-common.less';
+  @import '@/components/Editor/extensions/drag-common.less';
+}
+
 
