feat: 图册支持拖拽

--- a/src/components/Editor/extensions/image-gallary/components/ImageGallery/index.module.less
+++ b/src/components/Editor/extensions/image-gallary/components/ImageGallery/index.module.less
@@ -43,6 +43,11 @@
     color: white;
     display: flex;
   }
+  @import '@/components/Editor/extensions/drop-common.less';
+  @import '@/components/Editor/extensions/drag-common.less';
+  .dragHandler {
+    height: 1em;
+  }
 }
 
 .actions {
