--- a/src/components/Editor/extensions/multi-column-layout/components/MultiColumnsContainer/index.module.less
+++ b/src/components/Editor/extensions/multi-column-layout/components/MultiColumnsContainer/index.module.less
@@ -1,5 +1,12 @@
-.container {
-  display: flex;
-  gap: 10px;
-  flex-wrap: nowrap;
+.dropContainer {
+  position: relative;
+  .container {
+    display: flex;
+    gap: 10px;
+    flex-wrap: nowrap;
+  }
+  @import '@/components/Editor/extensions/drop-common.less';
+  @import '@/components/Editor/extensions/drag-common.less';
 }
+
+
