--- a/src/components/Editor/extensions/tabs/components/Tabs/index.module.less
+++ b/src/components/Editor/extensions/tabs/components/Tabs/index.module.less
@@ -1,8 +1,13 @@
-.tabsContainer {
-  border-radius: 12px;
-  border: 1px solid var(--line-color);
-  padding: 16px 16px 0;
-  .content {
-    padding: 20px 20px 0;
+.dropContainer {
+  position: relative;
+  .tabsContainer {
+    border-radius: 12px;
+    border: 1px solid var(--line-color);
+    padding: 16px 16px 0;
+    .content {
+      padding: 20px 20px 0;
+    }
   }
+  @import '@/components/Editor/extensions/drag-common.less';
+  @import '@/components/Editor/extensions/drop-common.less';
 }
