--- a/src/pages/Cards/CardsManagement/index.module.less
+++ b/src/pages/Cards/CardsManagement/index.module.less
@@ -1,14 +1,24 @@
-.cardsManagement {
+.manageContainer {
   position: relative;
-  height: 100%;
-  border-bottom: 20px solid transparent;
-  box-sizing: border-box;
-  overflow-y: auto;
   width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  overflow: hidden;
+  .cardsManagement {
+    position: relative;
+    height: 100%;
+    border-bottom: 20px solid transparent;
+    box-sizing: border-box;
+    overflow-y: auto;
+    width: 100%;
+    container-type: inline-size;
+    container-name: cardsManagement;
+  }
+
   .statusBar {
     position: absolute;
-    bottom: 5px;
-    right: 10px;
+    bottom: 10px;
+    right: 25px;
     display: flex;
     align-items: center;
     gap: 10px;
@@ -17,8 +27,6 @@
     line-height: 20px;
   }
   .editCardContainer {
-    container-type: inline-size;
-    container-name: cardsManagement;
     width: 100%;
     margin-top: 24px;
   }
