feat: 支持文档模式、拖拽和动画

--- a/src/themes/light.less
+++ b/src/themes/light.less
@@ -14,5 +14,7 @@ html[data-theme='light'] {
   --card-bg-color: rgb(255 255 255 / 0.4);
   --bottom-line-bg: #3358d4;
   --tab-active-color: #ecedf1;
+  --doc-fill-active: rgba( 20,86,240 ,0.15);
+  --doc-fill-text-color: #1456f0;
 }
 
