--- a/src/themes/dark.less
+++ b/src/themes/dark.less
@@ -13,4 +13,6 @@ html[data-theme="dark"] {
   --card-bg-color: rgb(255 255 255 / 0.01);
   --bottom-line-bg: #5472e4;
   --tab-active-color: #272f3b;
+  --doc-fill-active: rgba(76, 136, 255, 0.2);
+  --doc-fill-text-color: #4c88ff;
 }
