feat: 文档项优化

--- a/src/components/IconText/index.module.less
+++ b/src/components/IconText/index.module.less
@@ -3,12 +3,11 @@
   flex-direction: column;
   align-items: center;
   gap: 8px;
-  color: var(--text-normal);
   &.active {
-    color: gray;
+    color: var(--doc-fill-text-color);
   }
   &:hover {
-    color: gray;
+    color: var(--doc-fill-text-color);
     cursor: pointer;
   }
   .text {
