--- a/src/pages/Documents/Sidebar/Document/index.module.less
+++ b/src/pages/Documents/Sidebar/Document/index.module.less
@@ -5,6 +5,7 @@
     align-items: center;
     gap: 10px;
     margin-bottom: 10px;
+    border-bottom: 1px solid var(--line-color);
     .icon {
       width: 30px;
       height: 30px;
@@ -14,8 +15,7 @@
       border-radius: 50%;
       cursor: pointer;
       &:hover {
-        background-color: var(--doc-fill-active);
-        color: var(--doc-fill-text-color);
+        background-color: var(--common-hover-bg);
       }
     }
     .back {
