--- a/src/main.less
+++ b/src/main.less
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono&family=Ubuntu:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @import "./themes/dark.less";
 @import "./themes/light.less";
 
@@ -127,4 +126,8 @@ p {
   background: var(--clay-background, rgba(0, 0, 0, .005));
   border-radius: var(--clay-border-radius, 32px);
   box-shadow: var(--clay-shadow-outset, 8px 8px 16px 0 rgba(0, 0, 0, .25)), inset var(--clay-shadow-inset-primary,-8px -8px 16px 0 rgba(0, 0, 0, .25)), inset var(--clay-shadow-inset-secondary, 8px 8px 16px 0 hsla(0, 0%, 100%, .2))
+}
+
+#app {
+  border-radius: 12px;
 }
