--- a/src/pages/Documents/EditDoc/index.module.less
+++ b/src/pages/Documents/EditDoc/index.module.less
@@ -1,18 +1,42 @@
 .editDocContainer {
   height: 100%;
-  box-sizing: border-box;
-  overflow-y: auto;
-  padding: 20px;
-  .editorContainer {
-    position: relative;
-    margin: 0 auto;
-    max-width: 720px;
-    .title {
-      font-size: 1.2em;
-      font-weight: bold;
-      margin-bottom: 20px;
-      padding-bottom: 10px;
-      border-bottom: 1px solid var(--line-color);
+  width: 100%;
+  position: relative;
+  .editDoc {
+    height: 100%;
+    box-sizing: border-box;
+    overflow-y: auto;
+    padding: 20px;
+    .editorContainer {
+      position: relative;
+      margin: 0 auto;
+      max-width: 720px;
+      .title {
+        font-size: 1.2em;
+        font-weight: bold;
+        margin-bottom: 20px;
+        padding-bottom: 10px;
+        border-bottom: 1px solid var(--line-color);
+      }
+      .time {
+        margin-bottom: 24px;
+        display: flex;
+        gap: 10px;
+        opacity: .8;
+        font-size: .9em;
+      }
     }
+  }
+
+  .statusBar {
+    position: absolute;
+    bottom: 10px;
+    right: 25px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-size: 14px;
+    opacity: .8;
+    line-height: 20px;
   }
 }
