--- a/src/pages/Documents/Sidebar/DocumentItem/index.module.less
+++ b/src/pages/Documents/Sidebar/DocumentItem/index.module.less
@@ -61,15 +61,28 @@
     &:hover:not(.active) {
       background-color: var(--common-hover-bg);
     }
-    .title {
-      line-height: 30px;
-      white-space: nowrap;
+    .titleContainer {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      height: 30px;
       overflow: hidden;
-      text-overflow: ellipsis;
+      .icon {
+        width: 30px;
+        height: 30px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      .title {
+        line-height: 32px;
+        align-self: flex-start;
+      }
     }
     .icons {
       display: flex;
       align-items: center;
+      flex: none;
       .icon {
         cursor: pointer;
         width: 28px;
@@ -90,6 +103,7 @@
     display: flex;
     flex-direction: column;
     gap: 4px;
+    margin-bottom: 8px;
   }
 }
 
