--- a/src/layouts/DefaultLayout/TitleBar/index.module.less
+++ b/src/layouts/DefaultLayout/TitleBar/index.module.less
@@ -11,6 +11,9 @@
     .item {
       cursor: pointer;
       position: relative;
+      &.active {
+        color: var(--doc-fill-text-color);
+      }
       .line {
         position: absolute;
         width: 100%;
