--- a/src/pages/Documents/EditDoc/index.module.less
+++ b/src/pages/Documents/EditDoc/index.module.less
@@ -11,6 +11,9 @@
       position: relative;
       margin: 0 auto;
       max-width: 720px;
+      @media screen and (max-width: 1280px) {
+        max-width: 70%;
+      }
       .title {
         font-size: 1.2em;
         font-weight: bold;
