feat: 支持通过阿里云 OSS 同步数据库

--- a/src/layouts/DefaultLayout/Sidebar/index.module.less
+++ b/src/layouts/DefaultLayout/Sidebar/index.module.less
@@ -11,8 +11,12 @@
     gap: 20px;
   }
 
-  .checking {
+  .syncing {
     animation: rotate 1s linear infinite;
+  }
+
+  .checking {
+    animation: fadeInout 1s linear infinite;
   }
 }
 
@@ -22,5 +26,17 @@
   }
   100% {
       transform: rotate(359deg);
+  }
+}
+
+@keyframes fadeInout {
+  0% {
+    opacity: 1;
+  }
+  50% {
+      opacity: 0.5;
+  }
+  100% {
+      opacity: 1;
   }
 }
