feat: 卡片快捷操作收拢到 statusbar

--- a/src/pages/Cards/CardsManagement/index.module.less
+++ b/src/pages/Cards/CardsManagement/index.module.less
@@ -21,10 +21,13 @@
     right: 25px;
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 12px;
     font-size: 14px;
     opacity: .8;
     line-height: 20px;
+    .icon {
+      cursor: pointer;
+    }
   }
   .editCardContainer {
     width: 100%;
