feat: 文档支持目录，黑暗模式滚动条优化

--- a/src/main.less
+++ b/src/main.less
@@ -103,14 +103,14 @@ p {
 
 &::-webkit-scrollbar-track {
   border-radius: 3px;
-  background: rgba(0, 0, 0, 0.06);
+  background: var(--scroller-track-background-color);
   -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.08);
 }
 
 &::-webkit-scrollbar-thumb {
   border-radius: 3px;
-  background: rgba(0, 0, 0, 0.12);
-  -webkit-box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.2);
+  background: var(--scroller-thumb-background-color);
+  -webkit-box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
 [class*="ant-"] {
