--- a/src/themes/light.less
+++ b/src/themes/light.less
@@ -16,5 +16,7 @@ html[data-theme='light'] {
   --tab-active-color: #ecedf1;
   --doc-fill-active: rgba( 20,86,240 ,0.15);
   --doc-fill-text-color: #1456f0;
+  --scroller-track-background-color: rgba(0, 0, 0, 0.04);
+  --scroller-thumb-background-color: rgba(0, 0, 0, 0.06);
 }
 
