--- a/src/themes/dark.less
+++ b/src/themes/dark.less
@@ -15,4 +15,6 @@ html[data-theme="dark"] {
   --tab-active-color: #272f3b;
   --doc-fill-active: rgba(76, 136, 255, 0.2);
   --doc-fill-text-color: #4c88ff;
+  --scroller-track-background-color: rgba(255, 255, 255, 0.12);
+  --scroller-thumb-background-color: rgba(255, 255, 255, 0.24);
 }
