feat: 侧边栏隐藏统一管理

--- a/src/pages/Articles/ArticleEdit/index.module.less
+++ b/src/pages/Articles/ArticleEdit/index.module.less
@@ -51,18 +51,19 @@
     }
     .rightPart {
       flex: none;
-      min-width: 200px;
-      max-width: 280px;
+      width: 280px;
       margin-left: auto;
       margin-right: 80px;
+      overflow: hidden;
+      max-height: calc(100vh - 80px);
+      overflow-y: auto;
+      position: sticky;
+      top: 40px;
+      &::-webkit-scrollbar {
+        display: none;
+      }
       .outline {
-        max-height: calc(100vh - 80px);
-        overflow-y: auto;
-        position: sticky;
-        top: 40px;
-        &::-webkit-scrollbar {
-          display: none;
-        }
+        width: 280px;
       }
     }
   }
