--- a/src/pages/Cards/Sidebar/index.module.less
+++ b/src/pages/Cards/Sidebar/index.module.less
@@ -1,15 +1,12 @@
-.sidebarContainer {
-
-}
-
 .sidebar {
+  width: var(--sidebar-width);
   display: flex;
   flex-direction: column;
   gap: 10px;
   box-sizing: border-box;
   padding: 20px;
   height: 100%;
-  background-color: var(--card-bg-color);
+  border-right: 1px solid var(--line-color);
   .header {
     display: flex;
     gap: 10px;
