--- a/src/editor-extensions/document-card-list/components/DocumentCard/index.module.less
+++ b/src/editor-extensions/document-card-list/components/DocumentCard/index.module.less
@@ -7,9 +7,18 @@
   border-radius: 16px;
   transition: all .2s ease;
   cursor: pointer;
-    &:hover {
-      box-shadow: 0 3px 6px 0 rgb(0 0 0 / 15%);
+  background-image:
+          linear-gradient(-30deg, rgba(125, 26, 189, 0.1), transparent 50%);
+  &:hover {
+    box-shadow: 0 3px 6px 0 rgb(0 0 0 / 15%);
+    .title {
+      color: #7d1abd;
     }
+  }
+  &.dark {
+    background-color: #18151f;
+    box-shadow: 0 4px 21px -12px rgba(0, 0, 0, 0.66);
+  }
   .title {
     font-weight: bold;
     font-size: 30px;
