--- a/src/main.less
+++ b/src/main.less
@@ -1,6 +1,10 @@
 @import "./themes/dark.less";
 @import "./themes/light.less";
 
+html, body {
+  overscroll-behavior: none;
+}
+
 body {
   --font: 'Merriweather', '新宋体', '宋体', '楷体-简';
   --mono-font: 'JetBrains Mono', '楷体', '楷体-简';
