--- a/src/pages/Documents/Sidebar/DocumentItem/index.module.less
+++ b/src/pages/Documents/Sidebar/DocumentItem/index.module.less
@@ -73,6 +73,11 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        flex: none;
+        border-radius: 50%;
+        &.hoverable:hover {
+          background-color: var(--common-hover-bg);
+        }
       }
       .title {
         line-height: 32px;
@@ -97,13 +102,23 @@
       }
     }
   }
-  .children {
-    margin-top: 8px;
-    padding-left: 16px;
-    display: flex;
-    flex-direction: column;
-    gap: 4px;
-    margin-bottom: 8px;
+  .gridContainer {
+    display: grid;
+    grid-template-rows: 1fr;
+    transition: grid-template-rows .3s ease;
+    overflow: hidden;
+    margin: 8px 0;
+    &.hide {
+      grid-template-rows: 0fr;
+      margin: 0;
+    }
+    .children {
+      min-height: 0;
+      padding-left: 16px;
+      display: flex;
+      flex-direction: column;
+      gap: 4px;
+    }
   }
 }
 
