--- a/src/pages/Documents/index.module.less
+++ b/src/pages/Documents/index.module.less
@@ -1,11 +1,12 @@
 .documentContainer {
-  display: flex;
   width: 100%;
   height: 100%;
-  --sidebar-width: 280px;
+  display: flex;
   .sidebar {
-    width: var(--sidebar-width);
-    flex: none;
+    //position: absolute;
+    //top: 0;
+    //left: 0;
+    //flex: none;
     height: 100%;
     overflow: hidden;
   }
