--- a/src/pages/Cards/CardItem2/index.module.less
+++ b/src/pages/Cards/CardItem2/index.module.less
@@ -5,7 +5,7 @@
   position: relative;
   user-select: none;
 
-  &::after {
+  &.showLine::after {
     content: '';
     position: absolute;
     left: 0;
@@ -14,7 +14,7 @@
     height: 1px;
     background-color: var(--line-color);
   }
-  &:hover {
+  &:not(.active):hover {
     background-color: var(--common-hover-bg);
     cursor: pointer;
     .moreIcon {
@@ -22,7 +22,7 @@
     }
   }
   &.active {
-    background-color: var(--common-hover-bg);
+    background-color: var(--doc-fill-active);
   }
 
   .tags {
