--- a/src/pages/Cards/Sidebar/index.module.less
+++ b/src/pages/Cards/Sidebar/index.module.less
@@ -1,64 +1,32 @@
 .sidebar {
-  width: var(--sidebar-width);
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  box-sizing: border-box;
-  padding: 20px;
   height: 100%;
+  box-sizing: border-box;
   border-right: 1px solid var(--line-color);
-  .header {
+  overflow: hidden;
+  .selectTab {
+    height: 60px;
+    box-sizing: border-box;
     display: flex;
-    gap: 10px;
-    flex-direction: column;
-    .total {
+    align-items: center;
+    margin: 0 20px;
+    gap: 12px;
+    border-bottom: 1px solid var(--line-color);
+    .icon {
+      flex: none;
       display: flex;
-      justify-content: space-between;
       align-items: center;
-      .number {
-        font-weight: bold;
+      justify-content: center;
+      width: 32px;
+      height: 32px;
+      border-radius: 50%;
+      cursor: pointer;
+      &.select {
+        background: var(--doc-fill-active);
+        color: var(--doc-fill-text-color)
       }
-      .buttons {
-        display: flex;
-        gap: 8px;
-        flex-shrink: 0;
+      &:not(.select):hover {
+        background: var(--common-hover-bg);
       }
-    }
-    .input {
-      position: relative;
-      z-index: 1;
-      flex: 1;
-    }
-    .searchTips {
-      position: absolute;
-      top: calc(100% + 10px);
-      width: 100%;
-      left: 0;
-      background-color: var(--search-tips-bg, #fff);
-      border-radius: 8px;
-      box-shadow: var(--box-shadow1);
-      padding: 20px;
-      box-sizing: border-box;
-      .searchHeader {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-bottom: 16px;
-        .title {
-          font-size: 14px;
-          font-weight: bold;
-        }
-      }
-    }
-  }
-  .cardList {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    overflow-y: auto;
-    padding: 4px;
-    &::-webkit-scrollbar {
-      display: none;
     }
   }
 }
