--- a/src/components/Editor/components/PreviewWithEditor/index.module.less
+++ b/src/components/Editor/components/PreviewWithEditor/index.module.less
@@ -14,7 +14,7 @@
         height: auto !important;
         padding: 18px 12px 18px 12px;
         border-radius: 0;
-        font-size: 14px;
+        font-size: calc(var(--font-size) * 0.75);;
         font-family: var(--mono-font, "'Monaco', '楷体'");
       }
 
