feat: 支持卡片分类

--- a/src/pages/Cards/CardItem2/index.module.less
+++ b/src/pages/Cards/CardItem2/index.module.less
@@ -17,6 +17,8 @@
   &:not(.active):hover {
     background-color: var(--common-hover-bg);
     cursor: pointer;
+  }
+  &:hover {
     .moreIcon {
       display: flex;
     }
@@ -60,3 +62,4 @@
     }
   }
 }
+
