--- a/src/pages/TimeRecord/TimeRecordStatistic/index.module.less
+++ b/src/pages/TimeRecord/TimeRecordStatistic/index.module.less
@@ -1,5 +1,5 @@
 .charts {
   padding: 20px;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: repeat(auto-fill, minmax(1fr, 400px));
 }
