feat: 修复了一些 bug，卡片关系图不显示在单独路由

--- a/src/pages/QuickTimeRecord/index.module.less
+++ b/src/pages/QuickTimeRecord/index.module.less
@@ -15,12 +15,16 @@
     height: 56px;
     display: flex;
     align-items: center;
+    .title {
+      font-size: 1.2em;
+      font-weight: bold;
+    }
     .windowControl {
       margin-left: auto;
     }
   }
   .form {
-    padding-top: 24px;
+    padding-top: 12px;
     display: flex;
     flex-direction: column;
     gap: 10px;
