--- a/src/pages/TimeRecord/index.module.less
+++ b/src/pages/TimeRecord/index.module.less
@@ -5,6 +5,8 @@
   .sidebar {
     height: 100%;
     overflow: hidden;
+    flex: none;
+    box-sizing: border-box;
   }
   .content {
     flex: auto;
