--- a/src/pages/Cards/CardList/index.module.less
+++ b/src/pages/Cards/CardList/index.module.less
@@ -4,7 +4,7 @@
   gap: 10px;
   box-sizing: border-box;
   padding: 20px;
-  height: 100%;
+  height: calc(100% - 60px);
   .header {
     display: flex;
     gap: 10px;
