--- a/src/pages/QuickCard/index.module.less
+++ b/src/pages/QuickCard/index.module.less
@@ -15,6 +15,10 @@
     height: 56px;
     display: flex;
     align-items: center;
+    .title {
+      font-size: 1.2em;
+      font-weight: bold;
+    }
     .windowControl {
       margin-left: auto;
     }
