--- a/src/components/Editor/extensions/bulleted-list/components/BulletedList/index.module.less
+++ b/src/components/Editor/extensions/bulleted-list/components/BulletedList/index.module.less
@@ -4,4 +4,33 @@
   li:last-child *:last-child {
     margin: 0;
   }
+  li {
+    position: relative;
+    &::marker {
+      content: none;
+    }
+    &::before {
+      position: absolute;
+      content: '';
+      width: .3em;
+      height: .3em;
+      border-radius: 50%;
+      background: rgba(255, 255, 255, 0.4);
+      box-shadow: 0 0 0 3px rgba(250, 250, 250, 0.2);
+      left: -1em;
+      top: .75em;
+      transition: transform .3s ease-in-out;
+      &:hover {
+        transform-origin: center;
+        transform: scale(1.2);
+      }
+    }
+  }
+
+  :global(:root[data-theme='light']) & {
+    li::before {
+      background: rgba(56, 54, 54, 0.3);
+      box-shadow: 0 0 0 .2em rgba(0, 0, 0, .1);
+    }
+  }
 }
