--- a/src/pages/Cards/index.module.less
+++ b/src/pages/Cards/index.module.less
@@ -12,11 +12,29 @@
   .content {
     flex: auto;
     height: 100%;
+    position: relative;
+    .cardGraph {
+      position: absolute;
+      opacity: 0;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      z-index: -1;
+      pointer-events: none;
+      &.show {
+        opacity: 1;
+        z-index: 0;
+        pointer-events: auto;
+      }
+    }
     .cardsPanel {
       height: 100%;
       width: 100%;
       display: flex;
       gap: 10px;
+      position: relative;
+      z-index: 1;
     }
   }
 }
