--- a/src/components/Editor/extensions/bulleted-list/components/BulletedList/index.module.less
+++ b/src/components/Editor/extensions/bulleted-list/components/BulletedList/index.module.less
@@ -14,14 +14,16 @@
       height: .3em;
       border-radius: 50%;
       background: rgba(255, 255, 255, 0.4);
-      box-shadow: 0 0 0 .2em rgba(250, 250, 250, 0.15);
       left: -1em;
-      top: .75em;
+      top: .7em;
       transition: transform .3s ease-in-out;
       &:hover {
         transform-origin: center;
         transform: scale(1.2);
       }
+    }
+    &[data-fold="fold"]::before {
+      box-shadow: 0 0 0 .2em rgba(250, 250, 250, 0.15);
     }
   }
 
