--- a/src/themes/light.less
+++ b/src/themes/light.less
@@ -1,10 +1,10 @@
 html[data-theme='light'] {
-  --primary-bg-color: #f5f7f9;
-  --line-color: #0009321f;
-  --text-normal: rgba(0, 0, 0, .9);
+  --primary-bg-color: #fff;
+  --line-color: #F5F5F5;
+  --text-normal: black;
   --code-normal: #18045f;
-  // --code-bg: rgba(250, 255, 100, .15);
-  --code-bg: transparent;
+   --code-bg: rgba(250, 255, 100, .15);
+  //--code-bg: transparent;
   --box-shadow1: 0 3px 6px 0 rgba(0, 0, 0, .15);
   --box-shadow2: 0 4px 21px -12px rgba(0, 0, 0, .6);
   --block-panel-active-bg: #e6e6e6;
