--- a/src/components/Editor/extensions/code-block/components/CodeBlock/index.module.less
+++ b/src/components/Editor/extensions/code-block/components/CodeBlock/index.module.less
@@ -1,8 +1,10 @@
 .codeBlockContainer {
   position: relative;
-  --code-block-bg-color: rgba(255, 255, 255, 0.3);
+  --code-block-bg-color: transparent;
+  //--code-block-bg-color: rgba(255, 255, 255, 0.3);
   &.dark {
-    --code-block-bg-color: #0c1021;
+    //--code-block-bg-color: #0c1021;
+    --code-block-bg-color: transparent;
   }
   &.readOnly {
     :global(.CodeMirror-cursors) {
