--- a/src/components/WindowControl/index.module.less
+++ b/src/components/WindowControl/index.module.less
@@ -13,8 +13,11 @@
       border-radius: 4px;
       cursor: pointer;
     }
-    &.onTop {
-      transform: rotate(45deg);
+    .pin {
+      transform: rotate(-45deg);
+      &.onTop {
+        transform: rotate(0deg);
+      }
     }
   }
 }
