--- a/src/components/SelectModal/Card/index.module.less
+++ b/src/components/SelectModal/Card/index.module.less
@@ -3,8 +3,8 @@
   border-radius: 8px;
   cursor: pointer;
   &.selected {
-    background-color: var(--doc-fill-active);
-    color: var(--doc-fill-text-color);
+    background-color: var(--active-bg-color);
+    color: var(--active-text-color);
   }
   &:not(.selected):hover {
     background-color: var(--common-hover-bg);
