--- a/src/components/TitlebarIcon/index.module.less
+++ b/src/components/TitlebarIcon/index.module.less
@@ -1,17 +1,16 @@
 .icon {
   width: 40px;
   height: 40px;
-  border: 2px solid #F8F8F8;
+  border: 2px solid var(--line-color);
   border-radius: 8px;
   box-sizing: border-box;
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #8F6657;
+  color: var(--active-text-color);
   cursor: pointer;
   &.active {
-    border: 2px solid #8F6657;
-    color: #8F6657;
-    background-color: #FEF6F4;
+    border: 2px solid var(--active-text-color);
+    background-color: var(--active-bg-color);
   }
 }
