--- a/src/themes/dark.less
+++ b/src/themes/dark.less
@@ -7,7 +7,7 @@ html[data-theme="dark"] {
   --box-shadow1: 0px 3px 3px 0 rgba(128, 128, 128, .3);
   --box-shadow2: 0 4px 21px -12px rgba(0, 0, 0, .6);
   --block-panel-active-bg: #1a1b1d;
-  --common-hover-bg: rgba(255, 255, 255, .04);
+  --common-hover-bg: #383838;
   --table-odd-bg: rgba(255, 255, 255, .05);
   --table-border-color: #606770;
   --card-bg-color: rgb(255 255 255 / 0.01);
@@ -17,4 +17,9 @@ html[data-theme="dark"] {
   --doc-fill-text-color: #4c88ff;
   --scroller-track-background-color: rgba(255, 255, 255, 0.12);
   --scroller-thumb-background-color: rgba(255, 255, 255, 0.24);
+  --normal-card-bg: #333;
+  --normal-icon-bg: rgba(255, 255, 255, 0.1);
+  --active-bg-color: hsl(168, 80%, 10%);
+  --active-text-color: hsl(168, 50%, 80%);
+  --active-icon-bg: hsl(168, 80%, 20%);
 }
