--- a/src/themes/light.less
+++ b/src/themes/light.less
@@ -18,5 +18,10 @@ html[data-theme='light'] {
   --doc-fill-text-color: #1456f0;
   --scroller-track-background-color: rgba(0, 0, 0, 0.04);
   --scroller-thumb-background-color: rgba(0, 0, 0, 0.06);
+  --normal-card-bg: #FAFAFA;
+  --normal-icon-bg: #e8e8e8;
+  --active-bg-color: hsl(12, 80%, 95%);
+  --active-text-color: hsl(12, 50%, 30%);
+  --active-icon-bg: hsl(12, 80%, 85%);
 }
 
