--- a/src/layouts/ClassicLayout/List/ArticleList/ArticleItem/index.module.less
+++ b/src/layouts/ClassicLayout/List/ArticleList/ArticleItem/index.module.less
@@ -4,7 +4,7 @@
   border-radius: 8px;
   position: relative;
   user-select: none;
-  background-color: #FAFAFA;
+  background-color: var(--normal-card-bg);
   border: 2px solid transparent;
   box-sizing: border-box;
   cursor: pointer;
@@ -23,7 +23,7 @@
     margin-bottom: 10px;
     border-radius: 4px;
     .title {
-      color: white;
+      color: var(--text-normal);
       font-size: 1.2em;
       font-weight: bold;
       // 超出部分用省略号显示
@@ -38,17 +38,17 @@
   }
 
   &.active {
-    border: 2px solid #E1B9AB;
-    background-color: #FEF6F4;
+    border: 2px solid var(--active-text-color);
+    background-color: var(--active-bg-color);
     .moreIcon {
-      background-color: #FDE9E2;
+      background-color: var(--active-icon-bg);
     }
     .content {
       opacity: 1;
     }
-    .tag {
+    .tags {
       font-weight: bold;
-      color: #8E6558;
+      color: var(--active-icon-bg);
     }
   }
 
@@ -60,6 +60,6 @@
   }
   .tags {
     margin-top: 10px;
-    color: #747474;
+    color: var(--tag-color);
   }
 }
