--- a/src/layouts/ClassicLayout/List/DocumentList/DocumentItem/index.module.less
+++ b/src/layouts/ClassicLayout/List/DocumentList/DocumentItem/index.module.less
@@ -13,8 +13,8 @@
     cursor: pointer;
     border: 1px solid transparent;
     &.active {
-      background-color: var(--doc-fill-active);
-      color: var(--doc-fill-text-color);
+      background-color: var(--active-bg-color);
+      color: var(--active-text-color);
     }
     &.top {
       &::before {
@@ -24,7 +24,7 @@
         left: 2px;
         width: 100%;
         height: 2px;
-        background-color: var(--doc-fill-text-color);
+        background-color: var(--active-text-color);
       }
       &::after {
         content: '';
@@ -32,7 +32,7 @@
         top: -5px;
         left: 0;
         border: 4px solid transparent;
-        border-left-color: var(--doc-fill-text-color);
+        border-left-color: var(--active-text-color);
       }
     }
     &.bottom {
@@ -43,7 +43,7 @@
         left: 2px;
         width: 100%;
         height: 2px;
-        background-color: var(--doc-fill-text-color);
+        background-color: var(--active-text-color);
       }
       &::after {
         content: '';
@@ -51,12 +51,12 @@
         bottom: -5px;
         left: 0;
         border: 4px solid transparent;
-        border-left-color: var(--doc-fill-text-color);
+        border-left-color: var(--active-text-color);
       }
     }
     &.inside {
-      border: 1px dashed var(--doc-fill-text-color);
-      background-color: var(--doc-fill-active);
+      border: 1px dashed var(--active-text-color);
+      background-color: var(--active-bg-color);
     }
     &:hover:not(.active) {
       background-color: var(--common-hover-bg);
