--- a/src/layouts/ClassicLayout/List/DocumentList/DocumentList/DocumentItem/index.module.less
+++ b/src/layouts/ClassicLayout/List/DocumentList/DocumentList/DocumentItem/index.module.less
@@ -8,7 +8,6 @@
     font-size: 1.2em;
     font-weight: bold;
     padding: 8px 0;
-    //border-bottom: 1px solid var(--line-color);
     margin-bottom: 12px;
   }
   .desc {
@@ -47,8 +46,8 @@
     border-radius: 8px;
     padding: 8px 12px;
     &:hover {
-      background-color: var(--doc-fill-active);
-      color: var(--doc-fill-text-color);
+      background-color: var(--active-bg-color);
+      color: var(--active-text-color);
       cursor: pointer;
     }
   }
