--- a/src/layouts/ClassicLayout/List/DocumentList/DocumentList/index.module.less
+++ b/src/layouts/ClassicLayout/List/DocumentList/DocumentList/index.module.less
@@ -16,8 +16,8 @@
     justify-content: center;
     border-radius: 50%;
     &:hover {
-      background-color: var(--doc-fill-active);
-      color: var(--doc-fill-text-color);
+      background-color: var(--active-bg-color);
+      color: var(--active-text-color);
     }
   }
 }
